# wcsim_hybrid_attenuation_fit

./: CMakeLists.txt  Makefile  README.md  analysis_absorption.cc  fit_water_attenuation.c
.github/actions/docker-action/: Dockerfile  action.yml
.github/workflows/: Dockerfile  cmake.yml  main.yml
app/: CMakeLists.txt  WCSIM_TreeConvert.cc  analysis_absorption.cc  optical_fit.cc
app/config/: BnL_costh_binning.txt  R_binning.txt  config.toml  config_directHits.toml  costh_binning.txt  cosths_R_binning.txt  mPMTid_binning.txt  phim_binning.txt  sampleId_binning.txt  sample_binning.txt  timetof_binning.txt
cmake/: ROOTSetup.cmake  WCSIMSetup.cmake  c++CompilerSetup.cmake  cmessage.cmake  opticalfit-config.cmake  opticalfit-config.in  setup.sh.in
container/: README.md  optical_fit.def
macro/: FitAngularResponsePol.c  PlotGui.c  README.md  build_template_and_spline.c  makeLEDProfileInput.c  make_scatter_map.c  truth_alpha.c  truth_alpha.hh
singularity/: README.md
src/: AnaEvent.hh  AnaFitParameters.cc  AnaFitParameters.hh  AnaSample.cc  AnaSample.hh  AnaTree.cc  AnaTree.hh  BinManager.cc  BinManager.hh  CMakeLists.txt  Fitter.cc  Fitter.hh  Likelihoods.hh  ParameterFunction.hh  ToyThrower.cc  ToyThrower.hh
src/CacheManager/: CMakeLists.txt
src/CacheManager/include/: CacheManager.h  CacheParameters.h  CacheWeights.h  WeightAttenuation.h  WeightAttenuationZ.h  WeightPolynomialCosth.h  WeightSourcePhiVar.h  WeightSpline.h
src/CacheManager/src/: CacheIndexedSums.cpp  CacheManager.cpp  CacheParameters.cpp  CacheWeights.cpp  WeightAttenuation.cpp  WeightAttenuation.cu  WeightAttenuationZ.cpp  WeightAttenuationZ.cu  WeightNormalization.cpp  WeightPolynomialCosth.cpp  WeightPolynomialCosth.cu  WeightSourcePhiVar.cpp  WeightSourcePhiVar.cu  WeightSpline.cpp  WeightSpline.cu
src/toml/: toml_helper.h
src/utils/: AttenuationZ.hh  CalcGroupVelocity.hh  LEDProfile.hh  WCSIMDigitization.hh  heuman_lambda.hh
